Waiting on figuring out cube unfolding for Day 22